[package]
name = "gblur"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glfw = "0.58.0"
anyhow = "1.0.88"
image = "0.25.2"
rayon = "1.10.0"
sanitize-filename = "0.5.0"
config = "0.14.0"
clap = { version = "4.5.17", features = ["derive"] }
serde = "1.0.210"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
